--- a/fb.html
+++ b/fb.html
@@ -7,13 +7,40 @@
 <div class="container">
     <div class="header">
         <div class="logo">
-            <a href="fb.html" style="font-size:20px;color:#fff;font-weight: bold;text-decoration: none;";>facebook</a>
+            <a href="fb.html" style="margin-left:200px;margin-top:300px;font-size:25px ;color:#fff;font-weight: bold;text-decoration: none;font-family:Arial, Helvetica, sans-serif,helvetica Neue";>facebook</a>
 
 
         </div>
 <div class="login"></div>
+<form action=""></form>
+<table class="login-controls">
+<tr>
+    <td><label class="login-label">Email or Mobile</label></td>
+    <td><label class="login-label">password</label></td>
+</tr>
+<tr>
+    <td>
+        <input type="text"></td>
+      <td>  <input type="text">
+    </td>
+    <td><input class="sub-btn" type="submit" value="login"></td>
+</tr>
+<tr>
+    <td></td>
+    <td class="forgot">Forgotten account</td>
+</tr></table>
+</form>
+
     </div>
 
+
+</div>
+<div class="main-body">
+<div class="left-section">
+    <img class="imga" src="face.jpg" alt="">
+
+</div>
+<div class="right-section"></div>
 
 </div>
     </body>
